--- a/source/index.html
+++ b/source/index.html
@@ -12,20 +12,18 @@
     <a class="main-header__logo" href="#">
       <img class="main-header__logo-image" src="img/logo.svg" alt="Город Седона" width="185" height="96">
     </a>
-    <nav class="main-navigation main-navigation--closed">
+    <nav class="main-navigation">
       <button class="main-navigation__toggle" type="button">
-        <svg class="main-navigation__icon main-navigation__icon--closed" width="23" height="22" fill="none"
-             xmlns="http://www.w3.org/2000/svg">
+        <svg class="main-navigation__icon main-navigation__icon--closed main-navigation__icon--visible" width="23" height="22" fill="none" id="visible" xmlns="http://www.w3.org/2000/svg">
           <path d="M22.9 0H0v4h22.9V0ZM22.9 9H0v4h22.9V9ZM22.9 18H0v4h22.9v-4Z"/>
         </svg>
-        <svg class="main-navigation__icon main-navigation__icon--opened" width="23" height="23" fill="none"
-             xmlns="http://www.w3.org/2000/svg">
+        <svg class="main-navigation__icon main-navigation__icon--invisible" width="23" height="23" fill="none" id="invisible" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M22.2 2.8 19.4 0l-8.3 8.3L2.8 0 0 2.8l8.3 8.3L0 19.4l2.8 2.8 8.3-8.3 8.3 8.3 2.8-2.8-8.3-8.3 8.3-8.3Z"/>
         </svg>
         <span class="visually-hidden">Открыть меню</span>
       </button>
-      <ul class="main-navigation__list">
+      <ul class="main-navigation__list main-navigation__list--visible">
         <li class="main-navigation__item">
           <a class="main-navigation__link main-navigation__link--current" href="index.html">Главная</a>
         </li>
@@ -65,7 +63,7 @@
               <p class="advantages__description advantages__description--accent">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
             <picture>
-              <source media="(min-width: 1200px)" srcset="./img/photo-city-desktop.jpg 1x, ./img/photo-city-desktop@2x.jpg">
+              <source media="(min-width: 1200px)" srcset="./img/photo-city-desktop.jpg 1x, ./img/photo-city-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="./img/photo-city-tablet.jpg 1x, ./img/photo-city-tablet@2x.jpg 2x">
               <img class="advantages__image" src="./img/photo-city-mobile.jpg" srcset="./img/photo-city@2x.jpg 2x" alt="Город Седона">
             </picture>
