--- a/source/form.html
+++ b/source/form.html
@@ -193,7 +193,7 @@
   </footer>
 </div>
 
-<div class="modal">
+<div class="modal modal-close">
   <div class="modal__wrapper">
     <h2 class="modal__title heading">Что-то пошло не так!</h2>
     <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
@@ -201,13 +201,14 @@
   </div>
 </div>
 
-<div class="modal">
-  <div class="modal__wrapper">
+<div class="modal modal-close">
+  <div class="modal__wrapper modal__wrapper--correct">
     <h2 class="modal__title modal__title--correct heading">Ваш отзыв отправлен!</h2>
-    <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+    <p class="modal__description modal__description--correct">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
     <button class="modal__button modal__button--correct button" type="button">Закрыть окно</button>
   </div>
 </div>
 <script src="js/script.js"></script>
+<script src="js/modal.js"></script>
 </body>
 </html>
