--- a/source/form.html
+++ b/source/form.html
@@ -193,7 +193,7 @@
   </footer>
 </div>
 
-<div class="modal modal-close">
+<div class="modal">
   <div class="modal__wrapper">
     <h2 class="modal__title heading">Что-то пошло не так!</h2>
     <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
@@ -201,7 +201,7 @@
   </div>
 </div>
 
-<div class="modal modal-close">
+<div class="modal modal--correct">
   <div class="modal__wrapper modal__wrapper--correct">
     <h2 class="modal__title modal__title--correct heading">Ваш отзыв отправлен!</h2>
     <p class="modal__description modal__description--correct">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
