--- a/source/catalog.html
+++ b/source/catalog.html
@@ -60,7 +60,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="./img/catalog/photo-1-desktop.jpg">
                 <source media="(min-width: 768px)" srcset="./img/catalog/photo-1-tablet.jpg">
-                <img class="gallery__image" src="./img/catalog/photo-1-mobile.jpg" alt="дорога среди равнин">
+                <img class="gallery__image gallery__image--first" src="./img/catalog/photo-1-mobile.jpg" alt="дорога среди равнин">
               </picture>
               <div class="gallery__photo-information">
                 <h3 class="gallery__title">Неродные просторы</h3>
