--- a/source/index.html
+++ b/source/index.html
@@ -94,12 +94,12 @@
               <img class="advantages__image" src="./img/photo-bridge-mobile.jpg" srcset="./img/photo-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
             </picture>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--line">
             <h3 class="advantages__title heading">Небольшая площадь</h3>
             <span class="advantages__number">— №3 —</span>
             <p class="advantages__description">Все интересные места находятся очень близко</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--line">
             <h3 class="advantages__title heading">Красивая дорога</h3>
             <span class="advantages__number">— №4 —</span>
             <p class="advantages__description">Ехать в Седону из Лас-вегаса совсем не скучно!</p>
