--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Фото и видео</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body class="page__body">
 <div class="main-wrapper">
@@ -60,7 +63,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="./img/catalog/photo-1-desktop.jpg">
                 <source media="(min-width: 768px)" srcset="./img/catalog/photo-1-tablet.jpg">
-                <img class="gallery__image gallery__image--first" src="./img/catalog/photo-1-mobile.jpg" alt="дорога среди равнин">
+                <img class="gallery__image gallery__image--first" src="./img/catalog/photo-1-mobile.jpg" width="280" height="280" alt="дорога среди равнин">
               </picture>
               <div class="gallery__photo-information">
                 <h3 class="gallery__title">Неродные просторы</h3>
@@ -81,7 +84,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="./img/catalog/photo-2-desktop.jpg 1x">
                 <source media="(min-width: 768px)" srcset="./img/catalog/photo-2-tablet.jpg 1x">
-                <img class="gallery__image" src="./img/catalog/photo-2-mobile.jpg" alt="Местные растения">
+                <img class="gallery__image" src="./img/catalog/photo-2-mobile.jpg" width="280" height="280" alt="Местные растения">
               </picture>
               <div class="gallery__photo-information">
                 <h3 class="gallery__title">Местная растительность</h3>
@@ -102,7 +105,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="./img/catalog/photo-3-desktop.jpg 1x">
                 <source media="(min-width: 768px)" srcset="./img/catalog/photo-3-tablet.jpg 1x">
-                <img class="gallery__image" src="./img/catalog/photo-3-mobile.jpg" alt="Горный серпантин">
+                <img class="gallery__image" src="./img/catalog/photo-3-mobile.jpg" width="280" height="280" alt="Горный серпантин">
               </picture>
               <div class="gallery__photo-information">
                 <h3 class="gallery__title">Дорога на север</h3>
@@ -123,7 +126,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="./img/catalog/photo-4-desktop.jpg 1x">
                 <source media="(min-width: 768px)" srcset="./img/catalog/photo-4-tablet.jpg 1x">
-                <img class="gallery__image" src="./img/catalog/photo-4-mobile.jpg" alt="Мост дьявола">
+                <img class="gallery__image" src="./img/catalog/photo-4-mobile.jpg" width="280" height="280" alt="Мост дьявола">
               </picture>
               <div class="gallery__photo-information">
                 <h3 class="gallery__title">Мост дьявола</h3>
