--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body class="page__body">
 <div class="main-wrapper">
@@ -46,7 +49,10 @@
     <section class="intro">
       <div class="intro__wrapper container">
         <h2 class="visually-hidden">Знакомство с городом Седона</h2>
-        <img class="intro__logo" src="img/intro-logo.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
+        <picture>
+          <source media="(min-width: 768px)" srcset="img/intro-logo-tablet.svg">
+          <img class="intro__logo" src="img/intro-logo.svg" alt="Добро пожаловать в Седону.">
+        </picture>
       </div>
     </section>
 
@@ -65,7 +71,7 @@
             <picture>
               <source media="(min-width: 1200px)" srcset="./img/photo-city-desktop.jpg 1x, ./img/photo-city-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="./img/photo-city-tablet.jpg 1x, ./img/photo-city-tablet@2x.jpg 2x">
-              <img class="advantages__image" src="./img/photo-city-mobile.jpg" srcset="./img/photo-city@2x.jpg 2x" alt="Город Седона">
+              <img class="advantages__image" src="./img/photo-city-mobile.jpg" width="320" height="260" srcset="./img/photo-city@2x.jpg 2x" alt="Город Седона">
             </picture>
             <ul class="advantages__list-qualities">
               <li class="advantages__item advantages__item--quality advantages__item--house">
