--- a/source/index.html
+++ b/source/index.html
@@ -68,6 +68,9 @@
               <p class="advantages__description advantages__description--accent">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
             <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-city-desktop.webp 1x, img/photo-city-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-city-tablet.webp 1x, img/photo-city-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/photo-city-mobile.webp 1x, img/photo-city@2x.webp 2x">
               <source media="(min-width: 1200px)" srcset="./img/photo-city-desktop.jpg 1x, ./img/photo-city-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="./img/photo-city-tablet.jpg 1x, ./img/photo-city-tablet@2x.jpg 2x">
               <img class="advantages__image" src="./img/photo-city-mobile.jpg" width="320" height="260" srcset="./img/photo-city@2x.jpg 2x" alt="Город Седона">
@@ -175,7 +178,7 @@
         <h2 class="visually-hidden">HTML Academy</h2>
         <p class="copyright__text">Разработано</p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <span class="visually-hidden">HTML Academy</span>
+          <span class="visually-hidden">Сайт HTML Academy</span>
           <svg class="copyright__link-icon" width="27" height="35" fill="none">
             <use xlink:href="img/sprite.svg#icon-academyHtml"></use>
           </svg>
