--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
 <body class="page__body">
 <div class="main-wrapper">
   <header class="main-header">
-    <a class="main-header__logo" href="#">
+    <a class="main-header__logo" href="index.html">
       <img class="main-header__logo-image" src="img/logo.svg" alt="Город Седона" width="185" height="96">
     </a>
     <nav class="main-navigation">
