--- a/source/index.html
+++ b/source/index.html
@@ -91,7 +91,7 @@
             </ul>
           </li>
           <li class="advantages__item advantages__item--accent advantages__item--reverse">
-            <div class="advantages__item-wrapper">
+            <div class="advantages__item-wrapper advantages__item-wrapper--second">
               <h3 class="advantages__title heading advantages__title--accent">Там есть Мост дьявола</h3>
               <span class="advantages__number">— №2 —</span>
               <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
