--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,10 +18,10 @@
     <nav class="main-navigation">
       <button class="main-navigation__toggle" type="button">
         <svg class="main-navigation__icon main-navigation__icon--closed main-navigation__icon--visible" width="23" height="22" fill="none" id="visible">
-          <use xlink:href="img/sprite.svg#icon-visible"></use>
+          <use xlink:href="img/sprite.svg#icon-menu"></use>
         </svg>
         <svg class="main-navigation__icon main-navigation__icon--invisible" width="23" height="23" fill="none" id="invisible">
-          <use xlink:href="img/sprite.svg#icon-invisible"></use>
+          <use xlink:href="img/sprite.svg#icon-cross"></use>
         </svg>
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -70,7 +70,7 @@
                 <button class="gallery__button button" type="button">
                   <span class="visually-hidden">количество лайков</span>
                   <svg class="gallery__button-icon" width="23" height="21" fill="none">
-                    <use xlink:href="img/sprite.svg#likes"></use>
+                    <use xlink:href="img/sprite.svg#like-icon"></use>
                   </svg>
                   <span class="gallery__number-likes">1350</span>
                 </button>
@@ -90,7 +90,7 @@
                 <button class="gallery__button button" type="button">
                   <span class="visually-hidden">количество лайков</span>
                   <svg class="gallery__button-icon" width="23" height="21" fill="none">
-                    <use xlink:href="img/sprite.svg#likes"></use>
+                    <use xlink:href="img/sprite.svg#like-icon"></use>
                   </svg>
                   <span class="gallery__number-likes">143</span>
                 </button>
@@ -110,7 +110,7 @@
                 <button class="gallery__button button" type="button">
                   <span class="visually-hidden">количество лайков</span>
                   <svg class="gallery__button-icon" width="23" height="21" fill="none">
-                    <use xlink:href="img/sprite.svg#likes"></use>
+                    <use xlink:href="img/sprite.svg#like-icon"></use>
                   </svg>
                   <span class="gallery__number-likes">96</span>
                 </button>
@@ -130,7 +130,7 @@
                 <button class="gallery__button button" type="button">
                   <span class="visually-hidden">количество лайков</span>
                   <svg class="gallery__button-icon" width="23" height="21" fill="none">
-                    <use xlink:href="img/sprite.svg#likes"></use>
+                    <use xlink:href="img/sprite.svg#like-icon"></use>
                   </svg>
                   <span class="gallery__number-likes">254</span>
                 </button>
@@ -155,7 +155,7 @@
           <button class="video__button" type="button">
             <span class="visually-hidden">Включить видео</span>
             <svg class="video__button-icon" width="48" height="55" fill="none">
-              <use xlink:href="img/sprite.svg#icon-video"></use>
+              <use xlink:href="img/sprite.svg#play-icon"></use>
             </svg>
           </button>
         </div>
@@ -174,7 +174,7 @@
             <a class="social__link button" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Мы в Вконтакте</span>
               <svg class="social__link-icon" width="24" height="14" fill="none">
-                <use xlink:href="img/sprite.svg#icon-vkontakte"></use>
+                <use xlink:href="img/sprite.svg#vkontakte"></use>
               </svg>
             </a>
           </li>
@@ -182,7 +182,7 @@
             <a class="social__link button" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Мы в Телеграме</span>
               <svg class="social__link-icon" width="22" height="18" fill="none">
-                <use xlink:href="img/sprite.svg#icon-telegram"></use>
+                <use xlink:href="img/sprite.svg#telegram"></use>
               </svg>
             </a>
           </li>
@@ -202,7 +202,7 @@
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">Сайт HTML Academy</span>
           <svg class="copyright__link-icon" width="27" height="35" fill="none">
-            <use xlink:href="img/sprite.svg#icon-academyHtml"></use>
+            <use xlink:href="img/sprite.svg#htmlacademy"></use>
           </svg>
         </a>
       </section>
