--- a/source/form.html
+++ b/source/form.html
@@ -18,10 +18,10 @@
     <nav class="main-navigation">
       <button class="main-navigation__toggle" type="button">
         <svg class="main-navigation__icon main-navigation__icon--closed main-navigation__icon--visible" width="23" height="22" fill="none" id="visible">
-          <use xlink:href="img/sprite.svg#icon-visible"></use>
+          <use xlink:href="img/sprite.svg#icon-menu"></use>
         </svg>
         <svg class="main-navigation__icon main-navigation__icon--invisible" width="23" height="23" fill="none" id="invisible">
-          <use xlink:href="img/sprite.svg#icon-invisible"></use>
+          <use xlink:href="img/sprite.svg#icon-cross"></use>
         </svg>
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -151,7 +151,7 @@
             <a class="social__link button" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Мы в Вконтакте</span>
               <svg class="social__link-icon" width="24" height="14" fill="none">
-                <use xlink:href="img/sprite.svg#icon-vkontakte"></use>
+                <use xlink:href="img/sprite.svg#vkontakte"></use>
               </svg>
             </a>
           </li>
@@ -159,7 +159,7 @@
             <a class="social__link button" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Мы в Телеграме</span>
               <svg class="social__link-icon" width="22" height="18" fill="none">
-                <use xlink:href="img/sprite.svg#icon-telegram"></use>
+                <use xlink:href="img/sprite.svg#telegram"></use>
               </svg>
             </a>
           </li>
@@ -179,7 +179,7 @@
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">Сайт HTML Academy</span>
           <svg class="copyright__link-icon" width="27" height="35" fill="none">
-            <use xlink:href="img/sprite.svg#icon-academyHtml"></use>
+            <use xlink:href="img/sprite.svg#htmlacademy"></use>
           </svg>
         </a>
       </section>
