--- a/source/index.html
+++ b/source/index.html
@@ -102,7 +102,7 @@
               <img class="advantages__image" src="./img/photo-bridge-mobile.jpg" srcset="./img/photo-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
             </picture>
           </li>
-          <li class="advantages__item advantages__item--line">
+          <li class="advantages__item advantages__item--line advantages__item--third">
             <h3 class="advantages__title heading">Небольшая площадь</h3>
             <span class="advantages__number">— №3 —</span>
             <p class="advantages__description">Все интересные места находятся очень близко</p>
