--- a/source/catalog.html
+++ b/source/catalog.html
@@ -47,7 +47,10 @@
     <section class="intro">
       <div class="intro__wrapper intro__wrapper--short">
         <h2 class="visually-hidden">Седона</h2>
-        <img class="intro__logo intro__logo--short" src="img/logo-catalog.svg" width="229" height="39" alt="Добро пожаловать в Седону.">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="./img/logo-catalog-desktop.svg">
+          <img class="intro__logo intro__logo--short" src="img/logo-catalog.svg" width="229" height="39" alt="Добро пожаловать в Седону.">
+        </picture>
       </div>
     </section>
 
@@ -60,9 +63,9 @@
           <li class="gallery__item gallery__item--first">
             <a class="gallery__link" href="#">
               <picture>
-                <source media="(min-width: 1200px)" srcset="./img/catalog/photo-1-desktop.jpg 1x, img/catalog/photo-1-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="./img/catalog/photo-1-tablet.jpg 1x, img/catalog/photo-1-tablet@2x.jpg 2x">
-                <img class="gallery__image gallery__image--first" src="./img/catalog/photo-1-mobile.jpg" srcset="img/catalog/photo-1-mobile@2x.jpg 2x" width="280" height="280" alt="дорога среди равнин">
+                <source media="(min-width: 1200px)" srcset="./img/catalog/photo-1-desktop.jpg 1x, ./img/catalog/photo-1-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/photo-1-tablet.jpg 1x, ./img/catalog/photo-1-tablet@2x.jpg 2x">
+                <img class="gallery__image gallery__image--first" src="./img/catalog/photo-1-mobile.jpg" srcset="./img/catalog/photo-1-mobile@2x.jpg 2x" width="280" height="280" alt="дорога среди равнин">
               </picture>
               <div class="gallery__photo-information">
                 <h3 class="gallery__title">Неродные просторы</h3>
@@ -80,9 +83,9 @@
           <li class="gallery__item">
             <a class="gallery__link" href="#">
               <picture>
-                <source media="(min-width: 1200px)" srcset="./img/catalog/photo-2-desktop.jpg 1x, img/catalog/photo-2-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="./img/catalog/photo-2-tablet.jpg 1x, img/catalog/photo-2-tablet@2x.jpg 2x">
-                <img class="gallery__image" src="./img/catalog/photo-2-mobile.jpg" srcset="img/catalog/photo-2-tablet@2x.jpg 2x" width="280" height="280" alt="Местные растения">
+                <source media="(min-width: 1200px)" srcset="./img/catalog/photo-2-desktop.jpg 1x, ./img/catalog/photo-2-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/photo-2-tablet.jpg 1x, ./img/catalog/photo-2-tablet@2x.jpg 2x">
+                <img class="gallery__image" src="./img/catalog/photo-2-mobile.jpg" srcset="./img/catalog/photo-2-mobile@2x.jpg 2x" width="280" height="280" alt="Местная растительность">
               </picture>
               <div class="gallery__photo-information">
                 <h3 class="gallery__title">Местная растительность</h3>
@@ -100,9 +103,9 @@
           <li class="gallery__item">
             <a class="gallery__link" href="#">
               <picture>
-                <source media="(min-width: 1200px)" srcset="./img/catalog/photo-3-desktop.jpg 1x, img/catalog/photo-3-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="./img/catalog/photo-3-tablet.jpg 1x, img/catalog/photo-3-tablet@2x.jpg 2x">
-                <img class="gallery__image" src="./img/catalog/photo-3-mobile.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x" width="280" height="280" alt="Горный серпантин">
+                <source media="(min-width: 1200px)" srcset="./img/catalog/photo-3-desktop.jpg 1x, ./img/catalog/photo-3-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/photo-3-tablet.jpg 1x, ./img/catalog/photo-3-tablet@2x.jpg 2x">
+                <img class="gallery__image" src="./img/catalog/photo-3-mobile.jpg" srcset="./img/catalog/photo-3-mobile@2x.jpg 2x" width="280" height="280" alt="Горный серпантин">
               </picture>
               <div class="gallery__photo-information">
                 <h3 class="gallery__title">Дорога на север</h3>
@@ -120,9 +123,9 @@
           <li class="gallery__item">
             <a class="gallery__link" href="#">
               <picture>
-                <source media="(min-width: 1200px)" srcset="./img/catalog/photo-4-desktop.jpg 1x, img/catalog/photo-4-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="./img/catalog/photo-4-tablet.jpg 1x, img/catalog/photo-4-tablet@2x.jpg 2x">
-                <img class="gallery__image" src="./img/catalog/photo-4-mobile.jpg" srcset="img/catalog/photo-4-mobile@2x.jpg 2x" width="280" height="280" alt="Мост дьявола">
+                <source media="(min-width: 1200px)" srcset="./img/catalog/photo-4-desktop.jpg 1x, ./img/catalog/photo-4-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/photo-4-tablet.jpg 1x, ./img/catalog/photo-4-tablet@2x.jpg 2x">
+                <img class="gallery__image" src="./img/catalog/photo-4-mobile.jpg" srcset="./img/catalog/photo-4-mobile@2x.jpg 2x" width="280" height="280" alt="Мост дьявола">
               </picture>
               <div class="gallery__photo-information">
                 <h3 class="gallery__title">Мост дьявола</h3>
@@ -148,9 +151,9 @@
           раз!</p>
         <div class="video__image-container">
           <picture>
-            <source media="(min-width: 1200px)" srcset="./img/catalog/video-desktop.jpg 1x, img/catalog/video-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="./img/catalog/video-tablet.jpg 1x, img/catalog/video-tablet@2x.jpg 2x">
-            <img class="video__content-image" src="./img/catalog/video-mobile.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x" alt="Видеопрезентация о Седоне">
+            <source media="(min-width: 1200px)" srcset="./img/catalog/video-desktop.jpg 1x, ./img/catalog/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="./img/catalog/video-tablet.jpg 1x, ./img/catalog/video-tablet@2x.jpg 2x">
+            <img class="video__content-image" src="./img/catalog/video-mobile.jpg" srcset="./img/catalog/video-mobile@2x.jpg 2x" alt="Видеопрезентация о Седоне">
           </picture>
           <button class="video__button" type="button">
             <span class="visually-hidden">Включить видео</span>
