--- a/source/catalog.html
+++ b/source/catalog.html
@@ -63,6 +63,9 @@
           <li class="gallery__item gallery__item--first">
             <a class="gallery__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="./img/catalog/photo-1-desktop.webp 1x, ./img/catalog/photo-1-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="./img/catalog/photo-1-tablet.webp 1x, ./img/catalog/photo-1-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="./img/catalog/photo-1-mobile.webp 1x, ./img/catalog/photo-1-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="./img/catalog/photo-1-desktop.jpg 1x, ./img/catalog/photo-1-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./img/catalog/photo-1-tablet.jpg 1x, ./img/catalog/photo-1-tablet@2x.jpg 2x">
                 <img class="gallery__image gallery__image--first" src="./img/catalog/photo-1-mobile.jpg" srcset="./img/catalog/photo-1-mobile@2x.jpg 2x" width="280" height="280" alt="дорога среди равнин">
@@ -83,6 +86,9 @@
           <li class="gallery__item">
             <a class="gallery__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="./img/catalog/photo-2-desktop.webp 1x, ./img/catalog/photo-2-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="./img/catalog/photo-2-tablet.webp 1x, ./img/catalog/photo-2-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="./img/catalog/photo-2-mobile.webp 1x, ./img/catalog/photo-2-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="./img/catalog/photo-2-desktop.jpg 1x, ./img/catalog/photo-2-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./img/catalog/photo-2-tablet.jpg 1x, ./img/catalog/photo-2-tablet@2x.jpg 2x">
                 <img class="gallery__image" src="./img/catalog/photo-2-mobile.jpg" srcset="./img/catalog/photo-2-mobile@2x.jpg 2x" width="280" height="280" alt="Местная растительность">
@@ -103,6 +109,9 @@
           <li class="gallery__item">
             <a class="gallery__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="./img/catalog/photo-3-desktop.webp 1x, ./img/catalog/photo-3-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="./img/catalog/photo-3-tablet.webp 1x, ./img/catalog/photo-3-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="./img/catalog/photo-3-mobile.webp 1x, ./img/catalog/photo-3-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="./img/catalog/photo-3-desktop.jpg 1x, ./img/catalog/photo-3-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./img/catalog/photo-3-tablet.jpg 1x, ./img/catalog/photo-3-tablet@2x.jpg 2x">
                 <img class="gallery__image" src="./img/catalog/photo-3-mobile.jpg" srcset="./img/catalog/photo-3-mobile@2x.jpg 2x" width="280" height="280" alt="Горный серпантин">
@@ -123,6 +132,9 @@
           <li class="gallery__item">
             <a class="gallery__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="./img/catalog/photo-4-desktop.webp 1x, ./img/catalog/photo-4-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="./img/catalog/photo-4-tablet.webp 1x, ./img/catalog/photo-4-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="./img/catalog/photo-4-mobile.webp 1x, ./img/catalog/photo-4-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="./img/catalog/photo-4-desktop.jpg 1x, ./img/catalog/photo-4-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="./img/catalog/photo-4-tablet.jpg 1x, ./img/catalog/photo-4-tablet@2x.jpg 2x">
                 <img class="gallery__image" src="./img/catalog/photo-4-mobile.jpg" srcset="./img/catalog/photo-4-mobile@2x.jpg 2x" width="280" height="280" alt="Мост дьявола">
@@ -151,6 +163,9 @@
           раз!</p>
         <div class="video__image-container">
           <picture>
+            <source type="image/webp" media="(min-width: 1200px)" srcset="./img/catalog/video-desktop.webp 1x, ./img/catalog/video-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="./img/catalog/video-tablet.webp 1x, ./img/catalog/video-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="./img/catalog/video-mobile.webp 1x, ./img/catalog/video-mobile@2x.webp 2x">
             <source media="(min-width: 1200px)" srcset="./img/catalog/video-desktop.jpg 1x, ./img/catalog/video-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="./img/catalog/video-tablet.jpg 1x, ./img/catalog/video-tablet@2x.jpg 2x">
             <img class="video__content-image" src="./img/catalog/video-mobile.jpg" srcset="./img/catalog/video-mobile@2x.jpg 2x" alt="Видеопрезентация о Седоне">
@@ -201,8 +216,8 @@
       </section>
       <section class="main-footer__copyright copyright">
         <h2 class="visually-hidden">HTML Academy</h2>
-        <p class="copyright__text">Разработано</p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <p class="copyright__text">Разработано</p>
           <span class="visually-hidden">Сайт HTML Academy</span>
           <svg class="copyright__link-icon" width="27" height="35" fill="none">
             <use xlink:href="img/sprite.svg#htmlacademy"></use>
