--- a/source/form.html
+++ b/source/form.html
@@ -29,13 +29,13 @@
       </button>
       <ul class="main-navigation__list main-navigation__list--visible">
         <li class="main-navigation__item">
-          <a class="main-navigation__link main-navigation__link--current" href="index.html">Главная</a>
+          <a class="main-navigation__link" href="index.html">Главная</a>
         </li>
         <li class="main-navigation__item">
           <a class="main-navigation__link" href="catalog.html">Фото и видео</a>
         </li>
         <li class="main-navigation__item">
-          <a class="main-navigation__link" href="form.html">Форма Отзыва</a>
+          <a class="main-navigation__link main-navigation__link--current" href="form.html">Форма Отзыва</a>
         </li>
         <li class="main-navigation__item">
           <a class="main-navigation__link" href="#">Html academy</a>
