--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
     <a class="main-header__logo" href="#">
       <img class="main-header__logo-image" src="img/logo.svg" alt="Город Седона" width="185" height="96">
     </a>
-    <nav class="main-navigation">
+    <nav class="main-navigation main-navigation--nojs">
       <button class="main-navigation__toggle" type="button">
         <svg class="main-navigation__icon main-navigation__icon--closed main-navigation__icon--visible" width="23" height="22" fill="none" id="visible">
           <use xlink:href="img/sprite.svg#icon-menu"></use>
