--- a/source/index.html
+++ b/source/index.html
@@ -96,7 +96,7 @@
             <div class="advantages__item-wrapper advantages__item-wrapper--second">
               <h3 class="advantages__title heading advantages__title--accent">Там есть Мост дьявола</h3>
               <span class="advantages__number">— №2 —</span>
-              <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <p class="advantages__description advantages__description--accent advantages__description--second">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
             <picture>
               <source type="image/webp" media="(min-width: 1200px)" srcset="./img/photo-bridge-desktop.webp 1x, ./img/photo-bridge-desktop@2x.webp 2x">
@@ -129,7 +129,7 @@
     <section class="search">
       <div class="search__wrapper container">
         <h2 class="search__title">Заинтересовались?</h2>
-        <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
+        <p class="search__description">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц
           в седоне</p>
         <a class="search__button button" href="#">Найти гостиницу</a>
       </div>
